# bmi203-project6

./: README.md  main.py  pyproject.toml
regression/: __init__.py  logreg.py
test/: test_logreg.py
